[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbtui"
dynamic = ["version"]
description = 'Most popular databases CLI'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "database",
    "rdbms",
    "cli",
    "tui",
    "command line interface",
    "text user interface",
]
authors = [
  { name = "Vladimir Puzakov", email = "puzakov@tochka.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydantic",
    "rich",
    "typer",
]

[project.urls]
Documentation = "https://github.com/vppuzakov/dbcli#readme"
Issues = "https://github.com/vppuzakov/dbcli/issues"
Source = "https://github.com/vppuzakov/dbcli"

[project.scripts]
dbtui = "dbtui.cli:main"

[tool.hatch.version]
path = "dbtui/__about__.py"

[tool.hatch.envs.default]
type = "virtual"
path = ".venvs"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-testdox>=3.1.0",
  "pytest-clarity>=1.0.1",
  "pytest-dotenv>=0.5.2",
  "pytest-coverage>=0.0",
  "pytest-asyncio>=0.21.1",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


[tool.hatch.envs.lint]
detached = false
dependencies = [
  "python-lsp-server[all]",
  "ruff-lsp",
  "pylsp-mypy",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:dbtui tests}"
style = [
  "ruff {args:.}",
]
fmt = [
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]


[tool.ruff]
target-version = "py310"
line-length = 99
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
]
unfixable = [
]

[tool.ruff.isort]
known-first-party = ["dbtui"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["dbtui", "tests"]
branch = true
parallel = true
omit = [
  "dbtui/__about__.py",
]

[tool.coverage.paths]
dbtui = ["dbtui", "*/dbtui/dbtui"]
tests = ["tests", "*/dbtui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
